fix: use npm install instead of npm ci to update lock file

--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd project && npm ci
+          cd project && npm install
 
       - name: Build
         run: |
